--- a/css/goods.css
+++ b/css/goods.css
@@ -1,14 +1,16 @@
 .goods-content-wrap {
   background: #eeeeee;
-  width: 100%; }
+  width: 100%;
+  padding-bottom: 20px; }
 
 .goods-content {
   margin: 0 auto;
   width: 1190px;
-  height: 6000px;
+  height: 1000px;
   height: auto !important;
   min-height: 1000px;
-  background: #f4f4f4; }
+  background: #f4f4f4;
+  padding-bottom: 20px; }
 
 .link-list {
   line-height: 46px;
@@ -21,21 +23,56 @@
 .good-info {
   height: 543px;
   background: #fff; }
-  .good-info div:nth-of-type(1) {
+  .good-info #info-part1 {
     position: relative;
     width: 450px;
     height: 540px;
     float: left; }
-    .good-info div:nth-of-type(1) #pic-middle {
+    .good-info #info-part1 #pic-middle {
+      position: relative;
       width: 300px;
       height: 400px;
       border: 1px solid red;
       margin: 20px 0 0 70px; }
-      .good-info div:nth-of-type(1) #pic-middle img {
+      .good-info #info-part1 #pic-middle .active-middle img {
+        z-index: 1; }
+      .good-info #info-part1 #pic-middle img {
         position: absolute;
         width: 300px;
         height: 400px; }
-    .good-info div:nth-of-type(1) #pic-small {
+    .good-info #info-part1 #shadow {
+      position: absolute;
+      top: 0px;
+      left: -1000px;
+      width: 156px;
+      height: 156px;
+      z-index: 5;
+      background: rgba(255, 255, 0, 0.5);
+      border: 1px solid #fff; }
+    .good-info #info-part1 .share {
+      position: absolute;
+      top: 520px;
+      width: 450px;
+      left: 70px; }
+      .good-info #info-part1 .share p {
+        float: left;
+        margin-right: 10px; }
+      .good-info #info-part1 .share a {
+        float: left;
+        margin: 0 10px; }
+        .good-info #info-part1 .share a span {
+          font-family: iconfont;
+          font-size: 14px; }
+        .good-info #info-part1 .share a:nth-of-type(1) span {
+          color: #e5004f; }
+        .good-info #info-part1 .share a:nth-of-type(2) span {
+          color: #005e00; }
+        .good-info #info-part1 .share a:nth-of-type(3) {
+          background: #e5004f;
+          border-radius: 50%; }
+          .good-info #info-part1 .share a:nth-of-type(3) span {
+            color: #fff; }
+    .good-info #info-part1 #pic-small {
       clear: both;
       float: left;
       width: 300px;
@@ -43,16 +80,20 @@
       border: 1px solid red;
       margin: 10px 0 10px 70px;
       overflow: hidden; }
-      .good-info div:nth-of-type(1) #pic-small ul {
+      .good-info #info-part1 #pic-small ul {
         width: 380px; }
-        .good-info div:nth-of-type(1) #pic-small ul li {
+        .good-info #info-part1 #pic-small ul > .active-small {
+          border: 1px solid #999; }
+        .good-info #info-part1 #pic-small ul li {
           float: left;
           border: 1px solid #e1e1e1;
           padding: 0 3px;
           margin: 0 3px; }
-          .good-info div:nth-of-type(1) #pic-small ul li img {
+          .good-info #info-part1 #pic-small ul li img {
             float: left; }
-    .good-info div:nth-of-type(1) #pic-large {
+    .good-info #info-part1 #pic-large {
+      z-index: 5;
+      display: none;
       position: absolute;
       top: 20px;
       left: 390px;
@@ -60,20 +101,273 @@
       height: 400px;
       border: 1px solid red;
       overflow: hidden; }
+      .good-info #info-part1 #pic-large #large-img {
+        position: absolute; }
+        .good-info #info-part1 #pic-large #large-img .active-large img {
+          z-index: 50; }
+      .good-info #info-part1 #pic-large img {
+        position: absolute; }
+  .good-info #con-info {
+    position: absolute;
+    left: 488px;
+    width: 500px;
+    padding-top: 20px; }
+    .good-info #con-info h6 {
+      font-size: 18px;
+      margin-bottom: 10px; }
+    .good-info #con-info p {
+      color: #999;
+      line-height: 28px; }
+      .good-info #con-info p .yt-price {
+        font-size: 18px;
+        color: #e5004f;
+        font-weight: bold; }
+      .good-info #con-info p .refer-price {
+        text-decoration: line-through; }
+    .good-info #con-info .activity {
+      height: 34px;
+      line-height: 34px;
+      background: #eff0f4;
+      color: #666666;
+      margin: 15px 0; }
+      .good-info #con-info .activity p {
+        display: inline-block;
+        margin: 7px 10px 0;
+        width: 50px;
+        height: 20px;
+        line-height: 20px;
+        text-align: center;
+        background: #e5004f;
+        color: #fff; }
+    .good-info #con-info p a {
+      display: inline-block;
+      border: 1px solid #cccccc;
+      width: 55px;
+      height: 25px;
+      line-height: 25px;
+      text-align: center;
+      color: #000;
+      margin: 5px 3px; }
+      .good-info #con-info p a:nth-of-type(1) {
+        margin-left: 15px; }
+    .good-info #con-info .choose {
+      margin-top: 10px;
+      height: 40px; }
+      .good-info #con-info .choose .number {
+        float: left;
+        width: 70px;
+        height: 38px;
+        line-height: 38px;
+        background: #fff;
+        border: 1px solid #ccc;
+        font-size: 18px;
+        font-weight: bold;
+        color: #000;
+        padding-left: 18px; }
+        .good-info #con-info .choose .number b {
+          float: right;
+          width: 38px;
+          height: 38px;
+          background: #f6f6f6;
+          border-left: 1px solid #e9e9e9;
+          position: relative; }
+          .good-info #con-info .choose .number b span {
+            display: inline-block;
+            position: absolute;
+            left: 8px;
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent; }
+            .good-info #con-info .choose .number b span:nth-of-type(1) {
+              top: 8px;
+              border-bottom: 10px solid #ccc; }
+              .good-info #con-info .choose .number b span:nth-of-type(1):hover {
+                border-bottom: 10px solid #999; }
+            .good-info #con-info .choose .number b span:nth-of-type(2) {
+              top: 23px;
+              border-top: 10px solid #ccc; }
+              .good-info #con-info .choose .number b span:nth-of-type(2):hover {
+                border-top: 10px solid #999; }
+      .good-info #con-info .choose .now {
+        float: left;
+        margin: 0 10px;
+        width: 148px;
+        height: 38px;
+        background: #feeef3;
+        border: 1px solid #d6014b;
+        line-height: 38px;
+        text-align: center;
+        color: #d6014b;
+        font-size: 18px; }
+      .good-info #con-info .choose .cart {
+        float: left;
+        width: 148px;
+        height: 38px;
+        background: #e5004f;
+        border: 1px solid #d6024b;
+        line-height: 38px;
+        text-align: center;
+        color: #fff;
+        font-size: 18px; }
+        .good-info #con-info .choose .cart span {
+          font-family: iconfont; }
+    .good-info #con-info .promise {
+      margin-top: 30px;
+      padding-left: 20px;
+      height: 30px;
+      line-height: 30px;
+      background: #f7f3e8; }
+      .good-info #con-info .promise span {
+        margin: 0 6px; }
+  .good-info .brand {
+    position: absolute;
+    top: 340px;
+    left: 1000px;
+    width: 210px;
+    height: 115px;
+    padding-top: 20px;
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee; }
+    .good-info .brand a {
+      display: block; }
+      .good-info .brand a:nth-of-type(1) {
+        text-align: center;
+        font-size: 22px;
+        color: #000;
+        line-height: 70px;
+        font-weight: bold; }
+      .good-info .brand a:nth-of-type(2) {
+        text-align: center;
+        font-size: 14px;
+        color: #666; }
 
 .good-details {
   height: 1000px;
   height: auto !important;
   min-height: 1000px;
-  background: #fdd;
   margin-top: 10px; }
+  .good-details:after {
+    content: "";
+    display: block;
+    clear: both;
+    height: 0;
+    overflow: hidden;
+    visibility: hidden; }
   .good-details .details-main {
+    padding-bottom: 30px;
     background: #fff;
     float: left;
     width: 990px; }
+    .good-details .details-main .details-tit {
+      height: 30px;
+      line-height: 30px;
+      background: #999; }
+      .good-details .details-main .details-tit a {
+        color: #fff;
+        float: left;
+        ling-height: 30px;
+        padding: 0 36px;
+        border-right: 1px solid #fff; }
+      .good-details .details-main .details-tit span {
+        float: right;
+        height: 29px;
+        padding: 0 16px;
+        color: #fff; }
+        .good-details .details-main .details-tit span b {
+          font-family: iconfont; }
+        .good-details .details-main .details-tit span:nth-of-type(1) {
+          background: #cb0147;
+          font-size: 16px; }
+    .good-details .details-main .product {
+      padding: 3px 35px; }
+      .good-details .details-main .product .product-tit {
+        height: 25px;
+        padding-top: 15px;
+        font-size: 20px;
+        background: repeating-linear-gradient(to right, rgba(237, 237, 237, 0.5) 0, rgba(237, 237, 237, 0.5) 0.2%, rgba(255, 255, 255, 0) 0.2%, rgba(255, 255, 255, 0) 1%), repeating-linear-gradient(to bottom, rgba(237, 237, 237, 0.5) 0, rgba(237, 237, 237, 0.5) 5%, rgba(255, 255, 255, 0) 5%, rgba(255, 255, 255, 0) 20%);
+        font-size: 14px;
+        color: #d2c9c9;
+        margin: 30px 0 20px 0;
+        border-bottom: 1px dashed #d0d0d0; }
+        .good-details .details-main .product .product-tit span {
+          color: #000;
+          font-size: 20px;
+          margin-right: 10px;
+          border-bottom: 1px solid #e5004f; }
+      .good-details .details-main .product .product-para table {
+        table-layout: fixed; }
+        .good-details .details-main .product .product-para table tr {
+          width: 920px; }
+          .good-details .details-main .product .product-para table tr td {
+            padding-left: 30px;
+            width: 200px;
+            line-height: 30px; }
+          .good-details .details-main .product .product-para table tr:nth-child(odd) {
+            background: #f3f3f3; }
+          .good-details .details-main .product .product-para table tr:nth-child(even) {
+            background: #fbfbfb; }
+      .good-details .details-main .product .des {
+        line-height: 22px; }
+      .good-details .details-main .product .brand-story div {
+        width: 250px;
+        heigth: 380px;
+        padding: 0 25px;
+        float: left; }
+        .good-details .details-main .product .brand-story div p:nth-of-type(1) {
+          text-align: center;
+          line-height: 120px;
+          font-weight: bold;
+          font-size: 24px; }
+        .good-details .details-main .product .brand-story div p:nth-of-type(2) {
+          line-height: 40px;
+          font-size: 16px;
+          color: #666666;
+          border-bottom: 1px solid #cecece;
+          margin-bottom: 5px; }
+        .good-details .details-main .product .brand-story div p:nth-of-type(3) {
+          color: #666666;
+          line-height: 18px;
+          margin-bottom: 5px; }
+      .good-details .details-main .product .brand-story img {
+        float: left;
+        margin-left: 30px; }
+      .good-details .details-main .product .brand-story a {
+        float: right;
+        color: #e5004f; }
   .good-details .details-aside {
     background: #fff;
     float: right;
     width: 190px; }
+    .good-details .details-aside h6 {
+      padding: 0 10px;
+      height: 30px;
+      line-height: 30px;
+      background: #999999;
+      color: #fff;
+      font-weight: bold; }
+      .good-details .details-aside h6 a {
+        float: right;
+        color: #fff; }
+    .good-details .details-aside div {
+      height: 250px;
+      padding: 0 20px; }
+      .good-details .details-aside div img {
+        margin: 0 auto; }
+      .good-details .details-aside div p {
+        line-height: 18px;
+        margin-bottom: 10px; }
+        .good-details .details-aside div p a {
+          color: #666666; }
+          .good-details .details-aside div p a:hover {
+            color: #e5004f; }
+      .good-details .details-aside div span {
+        display: inline-block;
+        margin-left: 20px;
+        color: #e5004f;
+        font-weight: bold; }
+      .good-details .details-aside div b {
+        display: inline-block;
+        margin-left: 10px;
+        color: #999999;
+        font-weight: normal; }
 
 /*# sourceMappingURL=goods.css.map */
