--- a/scss/goods.scss
+++ b/scss/goods.scss
@@ -1,14 +1,16 @@
 .goods-content-wrap{
   background:#eeeeee;
   width:100%;
+  padding-bottom:20px;
 }
 .goods-content{
   margin:0 auto;
   width:1190px;
-  height:6000px;
+  height:1000px;
   height:auto !important;
   min-height:1000px;
   background:#f4f4f4;
+  padding-bottom:20px;
 }
 .link-list{
   line-height:46px;
@@ -26,20 +28,71 @@
   height:543px;
   background:#fff;
 
-  div:nth-of-type(1){
+  #info-part1{
     position:relative;
     width:450px;
     height:540px;
     float:left;
     #pic-middle{
+      position:relative;
       width:300px;
       height:400px;
       border:1px solid red;
       margin:20px 0 0 70px;
+      .active-middle{
+        img{
+          z-index:1;
+        }
+      }
       img{
         position:absolute;
         width:300px;
         height:400px;
+      }
+    }
+    #shadow{
+      position:absolute;
+      top:0px;
+      left:-1000px;
+      width:156px;
+      height:156px;
+      z-index:5;
+      background:rgba(255,255,0,0.5);
+      border:1px solid #fff;
+    }
+    .share{
+      position:absolute;
+      top:520px;
+      width:450px;
+      left:70px;
+      p{
+        float:left;
+        margin-right:10px;
+      }
+      a{
+        float:left;
+        margin:0 10px;
+        span{
+          font-family:iconfont;
+          font-size:14px;
+        }
+        &:nth-of-type(1){
+          span{
+            color:#e5004f;
+          }
+        }
+        &:nth-of-type(2){
+          span{
+            color:#005e00;
+          }
+        }
+        &:nth-of-type(3){
+          background:#e5004f;
+          border-radius:50%;
+          span{
+            color:#fff;
+          }
+        }
       }
     }
     #pic-small{
@@ -52,6 +105,9 @@
       overflow: hidden;
       ul{
         width:380px;
+        &>.active-small{
+          border:1px solid #999;
+        }
         li{
           float:left;
           border:1px solid #e1e1e1;
@@ -64,6 +120,8 @@
       }
     }
     #pic-large{
+      z-index:5;
+      display:none;
       position:absolute;
       top:20px;
       left:390px;
@@ -71,27 +129,349 @@
       height:400px;
       border:1px solid red;
       overflow:hidden;
+      #large-img{
+        position:absolute;
+        .active-large{
+          img{
+            z-index:50;
+          }
+        }
+      }
+      img{
+        position:absolute;
+      }
+    }
+  }
+  #con-info{
+    position:absolute;
+    left:488px;
+    width:500px;
+    padding-top:20px;
+    h6{
+      font-size:18px;
+      margin-bottom:10px;
+    }
+    p{
+      color:#999;
+      line-height:28px;
+      .yt-price{
+        font-size:18px;
+        color:#e5004f;
+        font-weight: bold;
+      }
+      .refer-price{
+        text-decoration:line-through;
+      }
+    }
+    .activity{
+      height:34px;
+      line-height:34px;
+      background:#eff0f4;
+      color:#666666;
+      margin:15px 0;
+      p{
+        display: inline-block;
+        margin:7px 10px 0;
+        width:50px;
+        height:20px;
+        line-height:20px;
+        text-align:center;
+        background:#e5004f;
+        color:#fff;
+      }
+    }
+    p{
+      a{
+        display:inline-block;
+        border:1px solid #cccccc;
+        width:55px;
+        height:25px;
+        line-height:25px;
+        text-align:center;
+        color:#000;
+        margin:5px 3px;
+        &:nth-of-type(1){
+          margin-left:15px;
+        }
+      }
+    }
+    .choose{
+      margin-top: 10px;
+      height:40px;
+      .number{
+        float:left;
+        width:70px;
+        height:38px;
+        line-height:38px;
+        background:#fff;
+        border:1px solid #ccc;
+        font-size:18px;
+        font-weight:bold;
+        color:#000;
+        padding-left:18px;
+        b{
+          float:right;
+          width:38px;
+          height:38px;
+          background:#f6f6f6;
+          border-left:1px solid #e9e9e9;
+          position:relative;
+          span{
+            display:inline-block;
+            position:absolute;
+            left:8px;
+            border-left:10px solid transparent;
+            border-right:10px solid transparent;
+            &:nth-of-type(1){
+              top:8px;
+              border-bottom:10px solid #ccc;
+              &:hover{
+                border-bottom:10px solid #999;
+              }
+            }
+            &:nth-of-type(2){
+              top:23px;
+              border-top:10px solid #ccc;
+              &:hover{
+                border-top:10px solid #999;
+              }
+            }
+          }
+        }
+      }
+      .now{
+        float:left;
+        margin:0 10px;
+        width:148px;
+        height:38px;
+        background:#feeef3;
+        border:1px solid #d6014b;
+        line-height:38px;
+        text-align:center;
+        color:#d6014b;
+        font-size:18px;
+      }
+      .cart{
+        float:left;
+        width:148px;
+        height:38px;
+        background:#e5004f;
+        border:1px solid #d6024b;
+        line-height:38px;
+        text-align:center;
+        color:#fff;
+        font-size:18px;
+        span{
+          font-family:iconfont;
+        }
+      }
+    }
+    .promise{
+      margin-top:30px;
+      padding-left:20px;
+      height:30px;
+      line-height:30px;
+      background:#f7f3e8;
+      span{
+        margin:0 6px;
+      }
+    }
+  }
+  .brand{
+    position:absolute;
+    top:340px;
+    left:1000px;
+    width:210px;
+    height:115px;
+    padding-top:20px;
+    border-top:1px solid #eee;
+    border-bottom:1px solid #eee;
+    a{
+      display:block;
+      &:nth-of-type(1){
+        text-align:center;
+        font-size:22px;
+        color:#000;
+        line-height:70px;
+        font-weight:bold;
+      }
+      &:nth-of-type(2){
+        text-align:center;
+        font-size:14px;
+        color:#666;
+      }
     }
   }
 }
-
-
 
 
 .good-details{
   height:1000px;
   height:auto !important;
   min-height:1000px;
-  background:#fdd;
   margin-top:10px;
+  &:after{
+    content:"";
+    display:block;
+    clear: both;
+    height:0;
+    overflow: hidden;
+    visibility: hidden;
+  }
   .details-main{
+    padding-bottom:30px;
     background:#fff;
     float:left;
     width:990px;
+    .details-tit{
+      height:30px;
+      line-height:30px;
+      background:#999;
+      a{
+        color:#fff;
+        float:left;
+        ling-height:30px;
+        padding:0 36px;
+        border-right:1px solid #fff;
+      }
+      span{
+        float:right;
+        height:29px;
+        padding:0 16px;
+        color:#fff;
+        b{
+          font-family:iconfont;
+        }
+        &:nth-of-type(1){
+          background:#cb0147;
+          font-size:16px;
+        }
+      }
+    }
+
+    .product{
+      padding:3px 35px;
+      .product-tit{
+        height:25px;
+        padding-top:15px;
+        font-size:20px;
+        background:repeating-linear-gradient(to right,rgba(237,237,237,0.5) 0,rgba(237,237,237,0.5) 0.2%,rgba(255,255,255,0) 0.2%,rgba(255,255,255,0) 1%),repeating-linear-gradient(to bottom,rgba(237,237,237,0.5) 0,rgba(237,237,237,0.5) 5%,rgba(255,255,255,0) 5%,rgba(255,255,255,0) 20%);
+        font-size:14px;
+        color:#d2c9c9;
+        span{
+          color:#000;
+          font-size:20px;
+          margin-right:10px;
+          border-bottom:1px solid #e5004f;
+        }
+        margin:30px 0 20px 0;
+        border-bottom:1px dashed #d0d0d0;
+      }
+      .product-para{
+        table{
+          table-layout: fixed;
+          tr{
+            width:920px;
+            td{
+              padding-left:30px;
+              width:200px;
+              line-height:30px;
+            }
+            &:nth-child(odd){
+              background:#f3f3f3;
+            }
+            &:nth-child(even){
+              background:#fbfbfb;
+            }
+          }
+        }
+      }
+      .des{
+        line-height:22px;
+      }
+      .brand-story{
+        div{
+          width:250px;
+          heigth:380px;
+          padding:0 25px;
+          float:left;
+          p{
+            &:nth-of-type(1){
+              text-align:center;
+              line-height:120px;
+              font-weight:bold;
+              font-size:24px;
+            }
+            &:nth-of-type(2){
+               line-height:40px;
+               font-size:16px;
+               color:#666666;
+               border-bottom:1px solid #cecece;
+               margin-bottom:5px;
+             }
+            &:nth-of-type(3){
+              color:#666666;
+              line-height:18px;
+              margin-bottom:5px;
+            }
+          }
+        }
+        img{
+          float:left;
+          margin-left:30px;
+        }
+        a{
+          float:right;
+          color:#e5004f;
+        }
+      }
+    }
+
   }
   .details-aside{
     background:#fff;
     float:right;
     width:190px;
+    h6{
+      padding:0 10px;
+      height:30px;
+      line-height:30px;
+      background:#999999;
+      color:#fff;
+      font-weight: bold;
+      a{
+        float:right;
+        color:#fff;
+      }
+    }
+    div{
+      height:250px;
+      padding:0 20px;
+      img{
+        margin:0 auto;
+      }
+      p{
+        line-height:18px;
+        margin-bottom:10px;
+        a{
+          color:#666666;
+          &:hover{
+            color:#e5004f;
+          }
+        }
+      }
+      span{
+        display: inline-block;
+        margin-left:20px;
+        color:#e5004f;
+        font-weight:bold;
+      }
+      b{
+        display: inline-block;
+        margin-left:10px;
+        color:#999999;
+        font-weight:normal;
+      }
+    }
   }
 }
