--- a/css/home.css
+++ b/css/home.css
@@ -8,113 +8,119 @@
 /*-------------banner--------------*/
 .banner-wrap {
   width: 100%;
-  margin: 0 auto;
-  background: url(../images/blue-bg.jpg) no-repeat center top; }
+  margin: 0 auto; }
 
 #banner {
   height: 471px;
-  background: url(../images/blue-img.jpg) no-repeat center top;
   position: relative; }
 
-#banner > script > ul {
-  width: 200px;
+#btn span {
+  display: inline-block;
+  width: 50px;
+  height: 80px;
+  background: rgba(0, 0, 0, 0.6);
   color: #fff;
-  float: left; }
-  #banner > script > ul > li {
-    background: #333;
-    line-height: 45px;
-    padding-left: 20px;
-    border-bottom: 1px solid #515151; }
-    #banner > script > ul > li:hover {
-      background: #d90048; }
-    #banner > script > ul > li:hover ul, #banner > script > ul > li:hover p {
-      display: block; }
-    #banner > script > ul > li > span {
-      font-size: 18px;
-      font-family: iconfont; }
-    #banner > script > ul > li > a {
-      color: #fff; }
-      #banner > script > ul > li > a:nth-of-type(1) {
-        font-size: 14px;
-        padding-right: 8px;
-        border-right: 1px solid #999; }
-      #banner > script > ul > li > a:nth-of-type(2) {
-        padding-left: 8px; }
-        #banner > script > ul > li > a:nth-of-type(2):hover {
-          text-decoration: underline; }
-    #banner > script > ul > li > b {
-      float: right;
-      margin: 20px 10px 0 0;
-      border-left: 5px solid #fff;
-      border-top: 5px solid transparent;
-      border-bottom: 5px solid transparent; }
-    #banner > script > ul > li .navSlide {
-      display: none;
-      width: 305px;
-      background: rgba(51, 51, 51, 0.95);
-      position: absolute;
-      padding: 0 15px;
-      top: 0;
-      left: 200px; }
-      #banner > script > ul > li .navSlide li {
-        height: 54px;
-        line-height: 24px;
-        border-bottom: 1px dashed #515151; }
-        #banner > script > ul > li .navSlide li a {
-          color: #fff;
-          padding: 0 6px; }
-          #banner > script > ul > li .navSlide li a:hover {
-            color: #d90048; }
-    #banner > script > ul > li > p {
-      z-index: 1;
-      display: none;
-      position: absolute;
-      left: 535px;
-      top: 0;
-      width: 165px;
-      padding: 0 10px;
-      height: 385px;
-      background: rgba(0, 0, 0, 0.9);
-      line-height: 26px; }
-      #banner > script > ul > li > p span {
-        line-height: 40px;
-        font-size: 14px;
-        font-weight: bold;
-        display: block;
-        border-bottom: 1px solid #515151; }
-      #banner > script > ul > li > p a {
-        float: left;
-        padding: 0 10px;
-        color: #fff; }
-        #banner > script > ul > li > p a:hover {
-          color: #d90048; }
-    #banner > script > ul > li:nth-of-type(2) ul, #banner > script > ul > li:nth-of-type(2) p {
-      top: 46px; }
-    #banner > script > ul > li:nth-of-type(4) ul, #banner > script > ul > li:nth-of-type(4) p {
-      top: 46px; }
-    #banner > script > ul > li:nth-of-type(10) ul, #banner > script > ul > li:nth-of-type(10) p {
-      top: 85px; }
+  font-size: 40px;
+  font-weight: bold;
+  position: absolute;
+  text-align: center;
+  line-height: 80px;
+  top: 50%;
+  margin-top: -40px;
+  cursor: pointer; }
+  #btn span:nth-of-type(1) {
+    left: 200px; }
+  #btn span:nth-of-type(2) {
+    right: 200px; }
 
-#banner > #partNav .partNav {
-  width: 200px;
-  color: #fff;
-  float: left;
-  height: 500px; }
+#pic-bg {
+  position: absolute;
+  top: 0;
+  left: -365px; }
+  #pic-bg li {
+    position: absolute; }
 
-#banner > #navList {
+#slider {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1190px;
+  height: 471px; }
+  #slider #pic {
+    width: 1190px;
+    height: 471px;
+    position: absolute; }
+    #slider #pic li {
+      width: 1190px;
+      height: 470px;
+      position: absolute; }
+      #slider #pic li img {
+        width: 1190px;
+        height: 470px; }
+
+#slider > #navList {
   position: absolute;
   bottom: 10px;
   left: 50%;
   margin-left: -85px; }
-  #banner > #navList span {
+  #slider > #navList li {
     float: left;
     width: 30px;
     height: 8px;
     margin: 2px;
-    background: #211616; }
-    #banner > #navList span:hover {
-      background: #d90048;
-      transition: 0.3s; }
+    background: #211616;
+    cursor: pointer; }
+  #slider > #navList .select {
+    background: #d90048;
+    transition: 0.3s; }
+
+#partNav > .partAside {
+  width: 200px;
+  color: #fff;
+  float: left;
+  position: absolute;
+  top: 0;
+  left: 0; }
+  #partNav > .partAside > li {
+    background: #333;
+    line-height: 46px;
+    height: 46px;
+    padding-left: 20px;
+    border-bottom: 1px solid #515151; }
+    #partNav > .partAside > li:hover {
+      background: #d90048; }
+    #partNav > .partAside > li > a {
+      color: #fff; }
+      #partNav > .partAside > li > a:nth-of-type(1) {
+        font-family: iconfont;
+        padding-right: 8px; }
+      #partNav > .partAside > li > a:nth-of-type(2) {
+        font-size: 14px;
+        padding-right: 8px;
+        border-right: 1px solid #999; }
+      #partNav > .partAside > li > a:nth-of-type(3) {
+        padding-left: 8px; }
+        #partNav > .partAside > li > a:nth-of-type(3):hover {
+          text-decoration: underline; }
+
+#partNav > .navConBox {
+  display: none;
+  width: 305px;
+  background: rgba(51, 51, 51, 0.95);
+  position: absolute;
+  padding: 0 15px;
+  top: 0;
+  left: 200px; }
+  #partNav > .navConBox li {
+    height: 54px;
+    line-height: 24px;
+    border-bottom: 1px dashed #515151; }
+    #partNav > .navConBox li a {
+      color: #fff;
+      padding: 0 6px; }
+      #partNav > .navConBox li a:hover {
+        color: #d90048; }
 
 #banner .banner-img {
   position: absolute;
@@ -474,6 +480,51 @@
       #main .final > a > div:hover {
         background: rgba(255, 255, 255, 0.2);
         transition: 0.3s; }
+
+#main {
+  position: relative; }
+
+#main > #fixedNav {
+  z-index: 50;
+  display: none;
+  position: fixed;
+  bottom: 50px;
+  right: 20px;
+  width: 45px;
+  height: 540px; }
+  #main > #fixedNav li {
+    font-family: iconfont;
+    width: 45px;
+    height: 45px;
+    background: #eee;
+    margin: 6px 0;
+    line-height: 45px;
+    font-size: 22px;
+    color: #666;
+    text-align: center;
+    position: relative;
+    cursor: pointer; }
+    #main > #fixedNav li:nth-of-type(10) {
+      font-weight: bold;
+      font-size: 16px; }
+    #main > #fixedNav li span {
+      padding: 8px 5px;
+      font-size: 12px;
+      line-height: 18px;
+      width: 35px;
+      height: 29px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: none; }
+    #main > #fixedNav li:hover span {
+      background: #c00;
+      color: #fff;
+      display: block; }
+  #main > #fixedNav .hover span {
+    background: #c00;
+    color: #fff;
+    display: block; }
 
 /*-------------bottom--------------*/
 #bottom {
