--- a/css/register.css
+++ b/css/register.css
@@ -46,7 +46,7 @@
     width: 308px;
     height: 35px;
     display: block;
-    background: #ccc;
+    background: #e5004f;
     border-radius: 5px;
     color: #fff;
     margin: 0 auto;
