--- a/scss/common.scss
+++ b/scss/common.scss
@@ -107,6 +107,11 @@ body header>div{
       width:224px;
       border-right:1px solid #efefef;
       float:left;
+      a{
+        display:block;
+        width:224px;
+        height:78px;
+      }
     }
     div:nth-of-type(1){
       width:120px;
