--- a/scss/home.scss
+++ b/scss/home.scss
@@ -36,147 +36,145 @@
 .banner-wrap{
   width:100%;
   margin: 0 auto;
-  background: url(../images/blue-bg.jpg) no-repeat center top;
 }
 #banner{
   height:471px;
-  background:url(../images/blue-img.jpg) no-repeat center top;
   position:relative;
 }
-#banner>script>ul{
+#btn{
+  span{
+    display: inline-block;
+    width:50px;
+    height:80px;
+    background:rgba(0,0,0,0.6);
+    color:#fff;
+    font-size:40px;
+    font-weight:bold;
+    position:absolute;
+    text-align:center;
+    line-height:80px;
+    top:50%;
+    margin-top:-40px;
+    cursor: pointer;
+    &:nth-of-type(1){
+      left:200px;
+    }
+    &:nth-of-type(2){
+      right:200px;
+    }
+  }
+}
+#pic-bg{
+  position:absolute;
+  top:0;
+  left:-365px;
+  li{
+    position: absolute;
+  }
+}
+#slider{
+  overflow:hidden;
+  position: absolute;
+  top:0;
+  left:0;
+  width:1190px;
+  height:471px;
+  #pic{
+    width:1190px;
+    height:471px;
+    position: absolute;
+    li{
+      width:1190px;
+      height:470px;
+      position: absolute;
+      img{
+        width:1190px;
+        height:470px;
+      }
+    }
+  }
+}
+#slider>#navList{
+  position:absolute;
+  bottom:10px;
+  left:50%;
+  margin-left:-85px;
+  li{
+    float:left;
+    width:30px;
+    height:8px;
+    margin:2px;
+    background:#211616;
+    cursor: pointer;
+  }
+  .select{
+    background:#d90048;
+    transition: 0.3s;
+  }
+}
+
+
+#partNav>.partAside{
   width:200px;
   color:#fff;
   float:left;
+  position: absolute;
+  top:0;
+  left:0;
   &>li{
     background:#333;
-    line-height:45px;
+    line-height:46px;
+    height:46px;
     padding-left:20px;
     border-bottom:1px solid #515151;
     &:hover{
        background:#d90048;
      }
-    &:hover ul,&:hover p{
-      display:block;
-    }
-    &>span{
-      font-size:18px;
-      font-family:iconfont;
-    }
     &>a{
       color:#fff;
       &:nth-of-type(1){
+        font-family:iconfont;
+        padding-right:8px;
+      }
+      &:nth-of-type(2){
         font-size:14px;
         padding-right:8px;
         border-right:1px solid #999;
       }
-      &:nth-of-type(2){
+      &:nth-of-type(3){
         padding-left:8px;
         &:hover{
           text-decoration:underline;
         }
       }
     }
-    &>b{
-      float:right;
-      margin:20px 10px 0 0;
-      border-left:5px solid #fff;
-      border-top:5px solid transparent;
-      border-bottom:5px solid transparent;
-    }
-    .navSlide{
-      display:none;
-      width:305px;
-      background:rgba(51,51,51,0.95);
-      position:absolute;
-      padding:0 15px;
-      top:0;
-      left:200px;
-      li{
-        height:54px;
-        line-height:24px;
-        border-bottom: 1px dashed #515151;
-        a{
-          color:#fff;
-          padding:0 6px;
-          &:hover{
-            color:#d90048;
-          }
-        }
-      }
-    }
-    &>p{
-      z-index:1;
-      display: none;
-      position:absolute;
-      left:535px;
-      top:0;
-      width:165px;
-      padding:0 10px;
-      height:385px;
-      background:rgba(0,0,0,0.9);
-      line-height:26px;
-      span{
-        line-height:40px;
-        font-size:14px;
-        font-weight:bold;
-        display:block;
-        border-bottom:1px solid #515151;
-      }
-      a{
-        float:left;
-        padding:0 10px;
-        color:#fff;
-        &:hover{
-          color:#d90048;
-        }
-      }
-    }
-    &:nth-of-type(2){
-      ul,p{
-        top:46px;
-      }
-    }
-    &:nth-of-type(4){
-      ul,p{
-        top:46px;
-      }
-    }
-    &:nth-of-type(10){
-      ul,p{
-        top:85px;
-      }
-    }
-  }
-}
-
-#banner>#partNav{
-  .partNav{
-    width:200px;
-    color:#fff;
-    float:left;
-    height: 500px;
   }
 }
 
 
-
-#banner>#navList{
+#partNav>.navConBox{
+  display: none;
+  width:305px;
+  background:rgba(51,51,51,0.95);
   position:absolute;
-  bottom:10px;
-  left:50%;
-  margin-left:-85px;
-  span{
-    float:left;
-    width:30px;
-    height:8px;
-    margin:2px;
-    background:#211616;
-    &:hover{
-      background:#d90048;
-      transition: 0.3s;
+  padding:0 15px;
+  top:0;
+  left:200px;
+  li{
+    height:54px;
+    line-height:24px;
+    border-bottom: 1px dashed #515151;
+    a{
+      color:#fff;
+      padding:0 6px;
+      &:hover{
+        color:#d90048;
+      }
     }
   }
 }
+
+
 #banner .banner-img{
   position:absolute;
   top:0;
@@ -547,7 +545,60 @@
   }
 }
 
-
+#main{
+  position: relative;
+}
+#main>#fixedNav{
+  z-index:50;
+  display:none;
+  position:fixed;
+  bottom:50px;
+  right:20px;
+  width:45px;
+  height:540px;
+  li{
+    font-family: iconfont;
+    width:45px;
+    height:45px;
+    background:#eee;
+    margin:6px 0;
+    line-height:45px;
+    font-size: 22px;
+    color: #666;
+    text-align: center;
+    position: relative;
+    cursor: pointer;
+    &:nth-of-type(10){
+      font-weight:bold;
+      font-size: 16px;
+    }
+    span{
+      padding:8px 5px;
+      font-size: 12px;
+      line-height:18px;
+      width: 35px;
+      height: 29px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: none;
+    }
+    &:hover{
+      span{
+        background: #c00;
+        color: #fff;
+        display: block;
+      }
+    }
+  }
+  .hover{
+    span{
+      background: #c00;
+      color: #fff;
+      display: block;
+    }
+  }
+}
 
 
 
@@ -612,6 +663,8 @@
     }
   }
 }
+
+
 
 
 
