--- a/css/goods.css
+++ b/css/goods.css
@@ -32,7 +32,7 @@
       position: relative;
       width: 300px;
       height: 400px;
-      border: 1px solid red;
+      border: 1px solid #fff;
       margin: 20px 0 0 70px; }
       .good-info #info-part1 #pic-middle .active-middle img {
         z-index: 1; }
@@ -77,9 +77,7 @@
       float: left;
       width: 300px;
       height: 80px;
-      border: 1px solid red;
-      margin: 10px 0 10px 70px;
-      overflow: hidden; }
+      margin: 10px 0 10px 70px; }
       .good-info #info-part1 #pic-small ul {
         width: 380px; }
         .good-info #info-part1 #pic-small ul > .active-small {
@@ -90,20 +88,23 @@
           padding: 0 3px;
           margin: 0 3px; }
           .good-info #info-part1 #pic-small ul li img {
+            width: 60px;
+            height: 80px;
             float: left; }
     .good-info #info-part1 #pic-large {
       z-index: 5;
       display: none;
       position: absolute;
       top: 20px;
-      left: 390px;
+      left: 380px;
       width: 400px;
       height: 400px;
-      border: 1px solid red;
       overflow: hidden; }
       .good-info #info-part1 #pic-large #large-img {
         position: absolute; }
         .good-info #info-part1 #pic-large #large-img .active-large img {
+          width: 768px;
+          height: 1240px;
           z-index: 50; }
       .good-info #info-part1 #pic-large img {
         position: absolute; }
@@ -155,38 +156,20 @@
       height: 40px; }
       .good-info #con-info .choose .number {
         float: left;
-        width: 70px;
+        width: 88px;
         height: 38px;
         line-height: 38px;
         background: #fff;
         border: 1px solid #ccc;
         font-size: 18px;
         font-weight: bold;
-        color: #000;
-        padding-left: 18px; }
-        .good-info #con-info .choose .number b {
-          float: right;
-          width: 38px;
-          height: 38px;
-          background: #f6f6f6;
-          border-left: 1px solid #e9e9e9;
-          position: relative; }
-          .good-info #con-info .choose .number b span {
-            display: inline-block;
-            position: absolute;
-            left: 8px;
-            border-left: 10px solid transparent;
-            border-right: 10px solid transparent; }
-            .good-info #con-info .choose .number b span:nth-of-type(1) {
-              top: 8px;
-              border-bottom: 10px solid #ccc; }
-              .good-info #con-info .choose .number b span:nth-of-type(1):hover {
-                border-bottom: 10px solid #999; }
-            .good-info #con-info .choose .number b span:nth-of-type(2) {
-              top: 23px;
-              border-top: 10px solid #ccc; }
-              .good-info #con-info .choose .number b span:nth-of-type(2):hover {
-                border-top: 10px solid #999; }
+        color: #000; }
+        .good-info #con-info .choose .number > #num {
+          text-align: center;
+          font-size: 20px;
+          display: block;
+          width: 85px;
+          height: 32px; }
       .good-info #con-info .choose .now {
         float: left;
         margin: 0 10px;
@@ -208,8 +191,11 @@
         text-align: center;
         color: #fff;
         font-size: 18px; }
-        .good-info #con-info .choose .cart span {
-          font-family: iconfont; }
+        .good-info #con-info .choose .cart p {
+          line-height: 37px;
+          color: #fff; }
+          .good-info #con-info .choose .cart p span {
+            font-family: iconfont; }
     .good-info #con-info .promise {
       margin-top: 30px;
       padding-left: 20px;
