--- a/scss/goods.scss
+++ b/scss/goods.scss
@@ -37,7 +37,7 @@
       position:relative;
       width:300px;
       height:400px;
-      border:1px solid red;
+      border:1px solid #fff;
       margin:20px 0 0 70px;
       .active-middle{
         img{
@@ -100,9 +100,7 @@
       float:left;
       width:300px;
       height:80px;
-      border:1px solid red;
       margin:10px 0 10px 70px;
-      overflow: hidden;
       ul{
         width:380px;
         &>.active-small{
@@ -114,6 +112,8 @@
           padding:0 3px;
           margin:0 3px;
           img{
+            width:60px;
+            height:80px;
             float:left;
           }
         }
@@ -124,15 +124,16 @@
       display:none;
       position:absolute;
       top:20px;
-      left:390px;
+      left:380px;
       width:400px;
       height:400px;
-      border:1px solid red;
       overflow:hidden;
       #large-img{
         position:absolute;
         .active-large{
           img{
+            width:768px;
+            height:1240px;
             z-index:50;
           }
         }
@@ -200,7 +201,7 @@
       height:40px;
       .number{
         float:left;
-        width:70px;
+        width:88px;
         height:38px;
         line-height:38px;
         background:#fff;
@@ -208,35 +209,12 @@
         font-size:18px;
         font-weight:bold;
         color:#000;
-        padding-left:18px;
-        b{
-          float:right;
-          width:38px;
-          height:38px;
-          background:#f6f6f6;
-          border-left:1px solid #e9e9e9;
-          position:relative;
-          span{
-            display:inline-block;
-            position:absolute;
-            left:8px;
-            border-left:10px solid transparent;
-            border-right:10px solid transparent;
-            &:nth-of-type(1){
-              top:8px;
-              border-bottom:10px solid #ccc;
-              &:hover{
-                border-bottom:10px solid #999;
-              }
-            }
-            &:nth-of-type(2){
-              top:23px;
-              border-top:10px solid #ccc;
-              &:hover{
-                border-top:10px solid #999;
-              }
-            }
-          }
+        &>#num{
+          text-align:center;
+          font-size:20px;
+          display:block;
+          width:85px;
+          height:32px;
         }
       }
       .now{
@@ -261,9 +239,14 @@
         text-align:center;
         color:#fff;
         font-size:18px;
-        span{
-          font-family:iconfont;
+        p{
+          line-height:37px;
+          color:#fff;
+          span{
+            font-family:iconfont;
+          }
         }
+
       }
     }
     .promise{
