--- a/scss/login.scss
+++ b/scss/login.scss
@@ -101,6 +101,15 @@
       }
     }
   }
+  .warn{
+    display:none;
+    position:absolute;
+    top:280px;
+    left:130px;
+    font-size:16px;
+    color:red;
+    font-weight:bold;
+  }
   .login-code{
     display:none;
     width:100%;
